# audiofiler

./: .gitattributes  .gitignore  AGENTS.md  AppConfig.h  CMakeCache.txt  CMakeLists.txt  DOCS_MAP.md  Doxyfile  JuceHeader.h  LogicAudit.md  PROGRESS_CHECKLIST.md  README.md  agent.md  analysis_report.md  apply_fix.py  apply_refactor.py  audit_docs.sh  build_error_log.txt  build_log.txt  cleanup_comments.py  learning.txt  notes  originalTauriSvelteSortaOverview.md  patch_loop_presenter.py  refactor_control_state.py  refactor_renderer.py  restore_and_fix.py  search_pattern.py  test  test_output.txt  update_silence.py  verify_run_list.txt
.agent/scripts/: fetch_latest_build.sh
.agent/workflows/: fetcher.md
.github/workflows/: build.yml
Source/: AppEnums.h  AudioPlayer.cpp  AudioPlayer.h  Config.cpp  Config.h  ConfigAudio.h  ControlButtonsPresenter.cpp  ControlButtonsPresenter.h  ControlPanel.cpp  ControlPanel.h  ControlPanelCopy.h  ControlPanelLayoutCache.h  ControlStatePresenter.cpp  ControlStatePresenter.h  CoordinateMapper.h  CutButtonPresenter.cpp  CutButtonPresenter.h  CutLayerView.cpp  CutLayerView.h  CutPresenter.cpp  CutPresenter.h  CutResetPresenter.cpp  CutResetPresenter.h  DrunkDrawnLookAndFeel.h  FileMetadata.h  FocusManager.cpp  FocusManager.h  KeybindHandler.cpp  KeybindHandler.h  LayoutManager.cpp  LayoutManager.h  LoopButton.cpp  LoopButton.h  LoopButtonPresenter.cpp  LoopButtonPresenter.h  LoopEditorPresenter.cpp  LoopEditorPresenter.h  LoopPresenter.cpp  LoopPresenter.h  LoopResetPresenter.cpp  (+60 more)
Source/Core/: AudioPlayer.cpp  AudioPlayer.h  FileMetadata.h  SessionState.cpp  SessionState.h  SilenceAnalysisWorker.cpp  SilenceAnalysisWorker.h  WaveformManager.cpp  WaveformManager.h
Source/Presenters/: ControlButtonsPresenter.cpp  ControlButtonsPresenter.h  ControlStatePresenter.cpp  CutButtonPresenter.cpp  CutPresenter.cpp  CutPresenter.h  CutResetPresenter.cpp  PlaybackRepeatController.cpp  PlaybackRepeatController.h  PlaybackTextPresenter.cpp  PlaybackTextPresenter.h  PlaybackTimerManager.cpp  PlaybackTimerManager.h  RepeatPresenter.cpp  SilenceDetectionPresenter.cpp  SilenceDetectionPresenter.h  SilenceThresholdPresenter.cpp  StatsPresenter.cpp  StatsPresenter.h  TransportPresenter.cpp  TransportPresenter.h
Source/Tests/: PlaybackHelpersTest.cpp  SilenceAnalysisTest.cpp
Source/UI/: ControlPanel.cpp  ControlPanel.h  FocusManager.cpp  FocusManager.h  InteractionCoordinator.cpp  InteractionCoordinator.h  KeybindHandler.cpp  KeybindHandler.h  LayoutManager.cpp  LayoutManager.h  MouseHandler.cpp  MouseHandler.h
Source/UI/Components/: MarkerStrip.cpp  MarkerStrip.h  TransportStrip.cpp  TransportStrip.h
Source/UI/LookAndFeel/: ModernLookAndFeel.h
Source/UI/Views/: CutLayerView.cpp  CutLayerView.h  PlaybackCursorGlow.cpp  PlaybackCursorGlow.h  PlaybackCursorView.cpp  WaveformView.cpp  WaveformView.h  ZoomView.cpp
Source/Utils/: Config.cpp  Config.h  CoordinateMapper.h  PlaybackHelpers.cpp  PlaybackHelpers.h  TimeEntryHelpers.cpp  TimeEntryHelpers.h  TimeUtils.cpp  UIAnimationHelper.h
Source/Workers/: SilenceAnalysisAlgorithms.cpp  SilenceAnalysisAlgorithms.h  SilenceDetectionLogger.cpp  SilenceDetectionLogger.h  SilenceDetector.cpp  SilenceDetector.h  SilenceWorkerClient.h
Tests/: AudioPlayerTest.cpp  PlaybackHelpersTest.cpp  SecurityFixTest.cpp  SilenceAnalysisTest.cpp  TestMain.cpp  TimeEntryHelpersTest.cpp  TimeUtilsTest.cpp
cmake/: CPM.cmake
self_created_tools/: find_unused_config.py
